Fix useless scrollbar on related posts
When all related posts fit on the same screen, there was a useless
scrollbar. I never noticed this because Firefox incorrectly hides the
scrollbar automatically. The issue is visible on Chromium.

--- a/assets/css/bobastyle.css
+++ b/assets/css/bobastyle.css
@@ -919,7 +919,7 @@ aside.quote {
   display: flex;
   flex-direction: row;
   gap: 20px;
-  overflow-x: scroll;
+  overflow-x: auto;
 }
 
 /* }}} */
